--- a/sdl2-sys/Cargo.toml
+++ b/sdl2-sys/Cargo.toml
@@ -53,6 +53,7 @@ static-link = []
 use_mac_framework = []
 use_ios_framework = []
 bundled = ["cmake"]
+bundled-ttf = ["cmake", "ttf"]
 mixer = []
 image = []
 ttf = []
