fix for non-windows

--- a/sdl2-sys/bundled/CMakeLists.txt
+++ b/sdl2-sys/bundled/CMakeLists.txt
@@ -27,11 +27,13 @@ if(RUST_SDL_BUNDLED_SDL2)
     set(SDL2_DISABLE_INSTALL OFF CACHE BOOL "")
     set(SDL2_DISABLE_INSTALL OFF)
     
-    set(SDL_OPENGL OFF CACHE BOOL "")
-    set(SDL_OPENGL OFF)
+    if(WIN32)
+        set(SDL_OPENGL OFF CACHE BOOL "")
+        set(SDL_OPENGL OFF)
 
-    set(SDL_OPENGLES ON CACHE BOOL "")
-    set(SDL_OPENGLES ON)
+        set(SDL_OPENGLES ON CACHE BOOL "")
+        set(SDL_OPENGLES ON)
+    endif()
     add_subdirectory(../SDL sdl2)
 endif()
 
